--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -3,7 +3,7 @@
     <div layout="row" style="margin: 16px;">
         <div layout="column" style="min-width:138px;">
             <div layout="column" style="margin-bottom: 8px" ng-repeat="node in vm.nodes | orderBy:node track by $index">
-                <md-toolbar class="md-whiteframe-z1" layout="row" layout-align="center center">
+                <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium" layout="row" layout-align="center center">
                     <span>{{node}}</span>
                 </md-toolbar>
                 <div class="md-whiteframe-z1" style="">
