--- a/app/device-status/device-status.html
+++ b/app/device-status/device-status.html
@@ -44,7 +44,7 @@
             </div>
         </md-toolbar>
         <div flex style="margin-bottom: 16px; padding: 8px;" class="md-whiteframe-z1">
-            <div ng-repeat="key in vm.sortedSensorNames | regexSearch:vm.sensorsOrderByFields:vm.q track by $index" layout="row"
+            <div ng-repeat="key in vm.sortedSensorNames | regexSearch:vm.sensorsOrderByFields:vm.q:vm.sensorValues track by $index" layout="row"
                  ng-if="!vm.hideNominalSensors || vm.hideNominalSensors && vm.sensorValues[key].status !== 'nominal'">
                 <span class="resource-sensor-name" style="min-width: 350px;max-width: 350px;">{{vm.sensorValues[key].name}}</span>
                 <span class="resource-sensor-status-item" ng-class="vm.sensorClass(vm.sensorValues[key].status)">{{vm.sensorValues[key].status}}</span>
