small layout fixes for scheduler pages

--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -19,7 +19,7 @@
         </md-button>
     </div>
 
-    <div flex layout="row" style="margin: 8px">
+    <div flex layout="row" style="margin: 8px; max-height: 100%; min-height: 100%;">
         <div class="md-whiteframe-z2" layout="column" flex>
             <md-toolbar class="md-whiteframe-z1" ng-mouseenter="showDraftTools = true;"
                         ng-mouseleave="showDraftTools = false;">
