--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -1,4 +1,4 @@
-<div flex layout="column"  style="min-width: 1250px; min-height: 850px; margin-bottom: 8px; margin-top: 4px;" ng-controller="SubArrayObservationsDetail as vm">
+<div flex layout="column"  style="min-width: 1320px; min-height: 850px; margin-bottom: 8px; margin-top: 4px;" ng-controller="SubArrayObservationsDetail as vm">
     <div layout="row" layout-align="center center" ng-class="{'maintenance-bg':subarray.maintenance}"
          style="margin: 0 8px" md-theme="{{themePrimaryButtons}}">
         <md-button style="margin: 0" title="Schedule Block Drafts"
@@ -84,6 +84,9 @@
                             <span flex class="subheader-text">
                                 <span>Description</span>
                             </span>
+                            <span style="width: 75px" class="subheader-text">
+                                <span>State</span>
+                            </span>
                             <span style="width: 150px" class="subheader-text">
                                 <span>Verification State</span>
                             </span>
@@ -117,6 +120,7 @@
                             </div>
                             <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
 
+                            <span style="width: 75px">{{item.state}}</span>
                             <span style="width: 150px">{{item.verification_state}}</span>
                             <span style="width: 75px"
                                 ng-class="{'green-color': item.ready, 'red-color': !item.ready}">{{item.ready? 'READY' : 'NOT READY'}}</span>
