--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -77,10 +77,10 @@
             <md-virtual-repeat-container class="schedule-draft-data-list" style="direction: rtl; overflow: auto" flex>
                 <div
                     md-virtual-repeat="item in filteredDraftItems = (vm.scheduleDraftData | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse)"
-                    ng-click="vm.setSelectedScheduleDraft(item)"
-                    ng-class="{'selected-draft-schedule-row': item.id_code === vm.selectedScheduleDraft.id_code}"
-                    class="schedule-draft-item" layout="column" post-ng-repeat-load-more>
-                    <div layout="row" layout-align="start center" style="max-height: 38px; padding: 0 4px">
+                     layout="column">
+                    <div ng-click="vm.setSelectedScheduleDraft(item)"
+                         ng-class="{'selected-draft-schedule-row': item.id_code === vm.selectedScheduleDraft.id_code}"
+                         class="schedule-draft-item" layout="row" layout-align="start center" style="max-height: 38px; padding: 0 4px" >
                         <md-progress-linear ng-if="item.verification_state === 'VERIFYING'" class="md-primary"
                                             md-mode="indeterminate"
                                             style="position: absolute; left: 0; right: 0; margin-top: -5px;">
