--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -116,7 +116,7 @@
                             style="padding: 0 4px" flex layout="row" layout-align="start center"
                             ng-click="item.confirmDelete = false; vm.setSelectedScheduleDraft(item)"
                             ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}"
-                            class="schedule-draft-item" layout="column">
+                            class="schedule-draft-item" layout="column" ng-show="item">
                             <md-progress-linear ng-if="item.verification_state === 'VERIFYING'"
                                                 class="md-primary progress-bar-fill"
                                                 md-mode="indeterminate"
@@ -201,7 +201,7 @@
                             md-virtual-repeat="item in vm.currentScheduleData = (vm.scheduleData | filter:{sub_nr:vm.subarray_id})"
                             ng-click="vm.setSelectedSchedule(item);" style="padding: 0 4px"
                             ng-class="{'selected-schedule-row': item === vm.selectedSchedule}"
-                            class="schedule-draft-item" layout="row" layout-align="start center">
+                            class="schedule-draft-item" layout="row" layout-align="start center" ng-show="item">
 
                             <md-progress-linear md-theme="green" ng-if="item.state === 'ACTIVE'"
                                                 class="md-primary progress-bar-fill"
@@ -290,7 +290,7 @@
                         ng-class="{'selected-resource-item': item.selected}"
                         ng-click="item.selected = !item.selected;"
                         class="schedule-draft-item" layout="column" layout-align="center start"
-                        post-ng-repeat-load-more>
+                        ng-show="item">
                         <div layout="row" layout-align="start center" style="padding: 0 2px">
                             <md-button class="inline-action-button"
                                        ng-click="vm.removeDraft(item); $event.stopPropagation()"
