--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -74,7 +74,7 @@
                 </span>
                 </div>
             </md-toolbar>
-            <md-virtual-repeat-container class="schedule-draft-data-list" style="direction: rtl; overflow: auto" flex>
+            <md-virtual-repeat-container ng-click="showDatePicker = false" class="schedule-draft-data-list" style="direction: rtl; overflow: auto" flex>
                 <div
                     md-virtual-repeat="item in filteredDraftItems = (vm.scheduleDraftData | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse)"
                      layout="column">
@@ -114,7 +114,7 @@
                                type="text" title="UTC"
                                class="schedule-item-input schedule-item-date-input"
                                ng-class="{'invalid-date-error': item.hasInvalidInput}"
-                               ng-click="vm.openDatePicker(item, $event);" ng-model="item.desired_start_time"
+                               ng-click="vm.openDatePicker(item, $event, $index);" ng-model="item.desired_start_time"
                                placeholder=""/>
                         <span ng-if="!item.editing" style="width: 140px;">{{item.desired_start_time}}</span>
                         <md-button ng-show="item.editing" class="inline-action-button"
@@ -153,7 +153,7 @@
             </md-virtual-repeat-container>
         </div>
 
-        <div layout="column" style="max-width: 400px;min-width: 400px;"
+        <div layout="column" style="max-width: 400px;min-width: 400px;" ng-click="showDatePicker = false"
              ng-class="{'highlight-script-window-with-box-shadow': vm.selectedScheduleDraft !== null,'script-window-without-box-shadow': vm.selectedScheduleDraft === null}">
             <md-toolbar class="panel-toolbar-small md-whiteframe-z1">
                 <div flex style="margin: 8px;" layout="row" layout-align="start center">
