--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -43,7 +43,8 @@
                                 data-on-set-time="vm.showEndDatePicker = false; onTimeSet(ulog.end_time, ulog, 'end_time')"></datetimepicker>
             </div>
         </div>
-        <md-select style="margin: 16px 0" placeholder="Select User Log Type" ng-model="ulog.userlog_type" style="width: 200px">
+        <div ng-form name="testForm">
+        <md-select style="margin: 16px 0" placeholder="Select User Log Type" ng-model="ulog.userlog_type" style="width: 200px" name="testType" required ng-class="{'input-error':register.name.$error.required}">
             <md-option value="shift_log">Shift Log</md-option>
             <md-option value="time_loss">Time-loss Log</md-option>
             <md-option value="observation">Observation Log</md-option>
@@ -51,7 +52,7 @@
             <md-option value="maintenance">Maintenance</md-option>
             <md-option value="alarm_log">Alarm Log</md-option>
         </md-select>
-
+        </div>
         <div layout="row">
             <div layout="column" flex>
                 <md-input-container flex>
@@ -103,7 +104,7 @@
         <md-button ng-click="hide()" class="md-primary">
             Cancel
         </md-button>
-        <md-button ng-click="add()" class="md-primary">
+        <md-button ng-click="add()" class="md-primary" ng-disabled="testForm.testType.$error.required">
             Submit Log
         </md-button>
     </div>
