--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -1,12 +1,12 @@
-<div layout="column" flex ng-controller="SensorListCtrl as vm" md-theme="{{themePrimary}}">
+<div layout="column" flex ng-controller="SensorListCtrl as vm" style="max-height: 100%; min-height: 100%">
 
-    <div layout="row" style="margin: 16px;">
+    <div flex layout="row" style="margin: 16px; max-height: 100%; min-height: 100%">
         <div layout="column" style="min-width:138px;">
             <div layout="column" style="margin-bottom: 8px" ng-repeat="node in vm.nodes | orderBy:node track by $index">
                 <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium" layout="row" layout-align="center center">
                     <span>{{node}}</span>
                 </md-toolbar>
-                <div class="md-whiteframe-z1" style="">
+                <div class="md-whiteframe-z1" style="overflow: auto">
                     <div ng-class="{'active-sensor-list-resource':vm.resourceSensorsBeingDisplayed === resource.name}"
                          ng-repeat="resource in vm.resourcesNames | filter:{'node':node} | orderBy:'name' track by $index"
                          style="position: relative">
@@ -17,8 +17,8 @@
                 </div>
             </div>
         </div>
-        <div class="resource-sensors-list" flex>
-            <md-toolbar class="md-whiteframe-z1" style="position: relative">
+        <div flex class="resource-sensors-list" layout="column" style="max-height: 100%; min-height: 100%">
+            <md-toolbar class="md-whiteframe-z1" style=" min-height: 80px">
                 <div layout="row" layout-align="start center" style="margin-left: 16px; margin-top: 16px">
                     <span flex>Sensors</span>
                     <md-checkbox class="md-primary" ng-model="vm.hideNominalSensors" ng-click="$event.stopPropagation()"
@@ -67,22 +67,23 @@
                     </span>
                 </div>
             </md-toolbar>
-            <div flex style="margin-bottom: 16px; padding: 8px;" class="md-whiteframe-z1"
-                 ng-show="vm.sensorsToDisplay.length > 0">
+            <md-virtual-repeat-container flex style="padding: 8px; overflow: auto; min-height: 100%;" class="md-whiteframe-z1">
+                <!--ng-if="!vm.hideNominalSensors || vm.hideNominalSensors && sensor.status !== 'nominal'"-->
                 <div
-                    ng-repeat="sensor in vm.sensorsToDisplay | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:vm.sensorsOrderBy.value:vm.sensorsOrderBy.reverse | limitTo:vm.limitTo track by $index"
-                    ng-show="vm.sensorLoaded($index)" title="{{sensor.description}}" class="resource-sensor-item"
-                    layout="row" class="unselectable"
-                    ng-click="vm.plotLiveSensorFeed(sensor, sensor.selectedForChart); sensor.selectedForChart = !sensor.selectedForChart;"
-                    ng-class="{'selected-for-chart-row': sensor.selectedForChart}"
-                    ng-if="!vm.hideNominalSensors || vm.hideNominalSensors && sensor.status !== 'nominal'">
-                    <span class="resource-sensor-name">{{sensor.name}}</span>
-                    <span class="resource-sensor-status-item" ng-class="vm.sensorClass(sensor.status)">{{sensor.status}}</span>
-                    <span class="resource-sensor-time-item">{{sensor.timestamp}}</span>
-                    <span class="resource-sensor-time-item">{{sensor.received_timestamp}}</span>
-                    <span flex class="resource-sensor-value-item">{{sensor.value}}</span>
+                    md-virtual-repeat="sensor in sensors = (vm.sensorsToDisplay | filter:filterByNotNominal | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:vm.sensorsOrderBy.value:vm.sensorsOrderBy.reverse)"
+                    layout="column">
+                    <div title="{{sensor.description}}" class="resource-sensor-item"
+                        layout="row" class="unselectable"
+                        ng-click="vm.plotLiveSensorFeed(sensor, sensor.selectedForChart); sensor.selectedForChart = !sensor.selectedForChart;"
+                        ng-class="{'selected-for-chart-row': sensor.selectedForChart}">
+                        <span class="resource-sensor-name">{{sensor.name}}</span>
+                        <span class="resource-sensor-status-item" ng-class="vm.sensorClass(sensor.status)">{{sensor.status}}</span>
+                        <span class="resource-sensor-time-item">{{sensor.timestamp}}</span>
+                        <span class="resource-sensor-time-item">{{sensor.received_timestamp}}</span>
+                        <span flex class="resource-sensor-value-item">{{sensor.value}}</span>
+                    </div>
                 </div>
-            </div>
+            </md-virtual-repeat-container>
         </div>
     </div>
 
