--- a/app/userlogs/userlogs.html
+++ b/app/userlogs/userlogs.html
@@ -66,11 +66,16 @@
         <md-tab flex label="Userlog Reports" class="md-whiteframe-z1" style="overflow: auto">
             <div layout="column" layout-align="start center" ng-click="vm.showEndDatePicker = false; vm.showDatePicker = false;"
                 style="cursor: inherit">
-                <div layout="row" style="width: 100%">
-                    <md-toolbar class="md-whiteframe-z1 md-toolbar-tools" layout="row" layout-align="start center" style="padding: 0">
-                        <span style="margin-left: 8px" flex></span>
-                        <div layout="row" layout-align="start center" md-theme="{{themePrimaryButtons}}" style="margin: 0 4px; font-size: 14px;">
-                            <md-select placeholder="Select User Log Type" class="md-primary md-raised" ng-model="vm.blank_query.userlog_type"
+                <div layout="column" style="width: 100%">
+                    <md-toolbar md-theme="{{themePrimary}}" class="md-toolbar-tools-medium md-whiteframe-z1">
+                        <span flex></span>
+                        <input class="fade-in search-input-box" style="width: 200px; max-width: 200px" type="search"
+                               ng-model-options="{ debounce: 300 }" ng-model="vm.q2" placeholder="Filter Userlogs..."/>
+                    </md-toolbar>
+                    <div md-theme="{{themePrimaryButtons}}" class="md-whiteframe-z1 md-toolbar-tools" layout="row" layout-align="start center" style="padding: 0">
+                        <span style="margin-left: 8px" flex>Report Parameters</span>
+                        <div layout="row" layout-align="start center" style="margin: 0 4px; font-size: 14px;">
+                            <md-select placeholder="Select User Log Type" ng-model="vm.blank_query.userlog_type"
                                        title="{{vm.blank_query.userlog_type}}"
                                        style="width: 150px; margin: 0 8px" multiple="true">
                                 <md-option value="shift_log">Shift Log</md-option>
@@ -96,7 +101,7 @@
                                                 class="datepickerMenu md-whiteframe-z1"
                                                 data-ng-model="vm.blank_query.start_time" style="position: absolute; left: 0; top: 34px"
                                                 data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown2&apos; }"
-                                                data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(vm.blank_query.start_time, ulog, 'start_time')"></datetimepicker>
+                                                data-on-set-time="vm.showDatePicker = false; vm.onTimeSet(vm.blank_query.start_time, vm.blank_query, 'start_time')"></datetimepicker>
                             </div>
                             <!--<span style="margin: 0 8px"></span>-->
                             <div layout="row" layout-align="center center" style="min-width: 220px;  position: relative">
@@ -115,39 +120,40 @@
                                                 data-ng-model="vm.blank_query.end_time" style="position: absolute; left: 0; top: 34px"
                                                 class="datepickerMenu md-whiteframe-z1"
                                                 data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown4&apos; }"
-                                                data-on-set-time="vm.showEndDatePicker = false; vm.onTimeSet(vm.blank_query.end_time, ulog, 'end_time')"></datetimepicker>
+                                                data-on-set-time="vm.showEndDatePicker = false; vm.onTimeSet(vm.blank_query.end_time, vm.blank_query, 'end_time')"></datetimepicker>
                             </div>
+                            <md-checkbox ng-model="vm.include_activity_logs" aria-label="Include Activity Logs"
+                                         style="font-size: 12px; width: 120px; line-height: 1.3;">
+                                Include Activity logs in Export
+                            </md-checkbox>
                             <md-button class="add-tab md-primary md-raised" ng-click="vm.queryUserlogs(event, vm.blank_query)"
                                        style="margin-right: 0;">Preview Report
                             </md-button>
                             <md-button class="add-tab md-primary md-raised" ng-click="vm.exportPdf(vm.blank_query.start_time, vm.blank_query.end_time, vm.blank_query.userlog_type)"
                                        style="margin-right: 0;">Export PDF
                             </md-button>
-                            <md-checkbox ng-model="vm.include_activity_logs" aria-label="Include Activity Logs"
-                                style="font-size: 12px; width: 120px; line-height: 1.3;">
-                                Include Activity logs in Export
-                            </md-checkbox>
                         </div>
-                    </md-toolbar>
+                    </div>
                 </div>
                 <div id="printarea" flex layout="column" style="width:100%" ng-show="vm.report_userlogs.length > 0">
                     <md-list>
-                        <md-list-item>
-                            <div class="md-list-item-text" style="font-size: 18px; font-weight: bold" layout="row" flex>
+                        <md-list-item style="padding: 0 8px">
+                            <div class="md-list-item-text" style="font-size: 18px; font-weight: bold;" layout="row" flex>
                                 <span style="width: 130px">Userlog Type</span>
-                                <span style="width: 150px">Log Timestamp</span>
+                                <span style="width: 180px">Log Timestamp</span>
                                 <span style="width: 130px">User</span>
                                 <span style="width: 150px">Event Started</span>
                                 <span style="width: 150px">Event Ended</span>
                                 <span style="width: 150px">Userlog Content</span>
                             </div>
                         </md-list-item>
-                        <md-list-item ng-repeat="rlog in vm.report_userlogs">
+                        <md-list-item ng-repeat="rlog in vm.filtered_report_userlogs = (vm.report_userlogs | regexSearch:vm.orderByUserLogsFields:vm.q2) track by $index"
+                                      style="padding: 0 8px; min-height: 32px">
                             <md-divider></md-divider>
                             <div class="md-list-item-text" style="font-size:small" flex
                                  layout="row">
                                 <span style="width: 130px">{{rlog.userlog_type}}</span>
-                                <span style="width: 150px">{{rlog.timestamp}}</span>
+                                <span style="width: 180px">{{rlog.timestamp}}</span>
                                 <span style="width: 130px">{{rlog.name}}</span>
                                 <span style="width: 150px">{{rlog.start_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
                                 <span style="width: 150px">{{rlog.end_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
