--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -2,7 +2,7 @@
 
     <div flex layout="row" style="margin: 16px; max-height: 100%; min-height: 100%">
         <div layout="column" style="min-width:138px;">
-            <div layout="column" style="margin-bottom: 8px" ng-repeat="node in vm.nodes | orderBy:node track by $index">
+            <div layout="column" style="margin-bottom: 8px" ng-repeat="node in vm.nodes | orderBy:node:true track by $index">
                 <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium" layout="row" layout-align="center center">
                     <span>{{node}}</span>
                 </md-toolbar>
