changed sensor graph input dates to work with UTC

--- a/app/config/config.html
+++ b/app/config/config.html
@@ -33,7 +33,7 @@
                 </md-checkbox>
                 <md-checkbox class="md-primary alarms-tools-checkbox" ng-model="$root.showLocalAndSAST"
                              ng-change="vm.saveToLocalStorage('showLocalAndSAST', $root.showLocalAndSAST)">
-                    Show Local and South African Standard Time
+                    Show UTC and Local Time
                 </md-checkbox>
             </div>
             <div class="config-div-item">
