--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -78,7 +78,7 @@
                         </md-menu>
                         <div class="unselectable list-subheader-title" layout="row" layout-align="start center"
                              style="position: absolute; right: 0; bottom: 0; padding: 0; height: 12px">
-                            <span style="width: 125px; padding-left: 8px" class="subheader-text">
+                            <span style="width: 135px; padding-left: 16px" class="subheader-text">
                                 <span>ID</span>
                             </span>
                             <span flex class="subheader-text">
@@ -104,7 +104,7 @@
 
                 <div flex class="schedule-draft-data-list" style="padding: 0; direction: rtl" ng-class="{'maintenance-bg':vm.subarray.maintenance}">
                     <div ng-repeat="item in vm.currentScheduleData = (vm.scheduleData | filter:{sub_nr:vm.subarray_id}) track by item.id"
-                         ng-click="vm.setSelectedSchedule(item);" style="padding: 0 4px"
+                         ng-click="vm.setSelectedSchedule(item);" style="padding: 0 2px"
                          ng-class="{'selected-schedule-row': item === vm.selectedSchedule}"
                          class="schedule-draft-item" layout="row" layout-align="start center">
 
@@ -112,6 +112,7 @@
                                                 md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}" value="{{item.progress}}"
                                                 style="position: absolute; left: 0; right: 0; opacity: 0.8;">
                             </md-progress-linear>
+                            <span title="{{item.priority}}" style="min-width: 14px" class="fa" ng-class="{'fa-arrow-circle-up': item.priority === 'HIGH', 'fa-arrow-circle-down': item.priority === 'LOW'}"></span>
                             <div layout="column" layout-align="start" style="width: 120px">
                                 <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                       style="font-size: 14px; font-weight: bold">{{item.id_code}}
